--- a/styles/base.css
+++ b/styles/base.css
@@ -22,17 +22,20 @@ h4,
 h5,
 h6 {
   font-family: 'Poppins', sans-serif;
-  /* color: #2d2d2d; */
+  color: #2d2d2d;
   /*  */
   color: #003366;
   /*  */
 }
 .text h4, .text h5{
-  color: #003366;
+  color: #333333;
+  color: #444;
 }
 p{
     /*  */
     color: #013c76;
+
+    color: #444;
     
     /*  */
 }
@@ -186,6 +189,33 @@ footer .footer-contact i {
 .footer-contact a:hover {
   text-decoration: underline;
 }
+
+
+
+
+/* ************************ */
+/* ************************ */
+
+.btn-primary {
+  background-color: white;
+  color: #444;
+  border: 1px solid #d4af37;
+}
+.btn-primary:hover {
+  background-color: #003366;
+  color: #fff;
+}
+
+footer {
+  background-color: #001f3f; /* darker than #003366 */
+  color: #fdf6ec;
+}
+
+footer .footer-contact i {
+  color: #d4af37; /* gold icons in footer */
+}
+
+/* ************************ */
 
 
 /* Media Queries */
