--- a/styles/accommodation.css
+++ b/styles/accommodation.css
@@ -47,6 +47,9 @@
 @media screen and (min-width: 768px) {
   .accommodation-list {
     display: flex;
+    justify-content: center;
+   gap: 20px;
+
   }
 
   .accommodation-wrapper {
