--- a/styles/base.css
+++ b/styles/base.css
@@ -27,25 +27,22 @@ h6 {
   color: #003366;
   /*  */
 }
-.text h4, .text h5{
+.text h4,
+.text h5 {
   color: #333333;
   color: #444;
 }
-p{
-    /*  */
-    color: #013c76;
-
-    color: #444;
-    
-    /*  */
+p {
+  color: #013c76;
+  color: #444;
 }
+
 .container {
   width: 90%;
   max-width: 1100px;
   margin: auto;
 }
 
-/* Wrapper pushes footer to the bottom */
 .page-wrapper {
   min-height: 100vh;
   display: flex;
@@ -62,36 +59,32 @@ header .navbar {
 .navbar {
   /* background-color: #003366; */
   padding: 10px 0;
- 
 }
 
-.navbar .navbar-brand  {
+.navbar .navbar-brand {
   color: #d4af37;
   font-size: 25px;
   /*  */
   color: #003366;
   font-weight: 800;
   margin-top: 15px;
-
-
 }
-.navbar .navbar-brand:hover{
+.navbar .navbar-brand:hover {
   color: inherit;
 }
 .navbar .nav-item .nav-link {
   text-decoration: none;
   color: white;
   padding-left: 5px;
-    /*  */
-    color: #003366;
-    /*  */
+  /*  */
+  color: #003366;
+  /*  */
 }
-
 
 .navbar-nav .nav-item .nav-link.active {
   background-color: #003366;
   color: white;
-  border-radius: 4px; 
+  border-radius: 4px;
 }
 
 .navbar-toggler:hover,
@@ -101,14 +94,11 @@ header .navbar {
   border-radius: 4px;
 }
 
-
 .navbar .nav-links {
   list-style: none;
   display: flex;
   gap: 15px;
 }
-
-
 
 .navbar-nav {
   list-style: none;
@@ -118,7 +108,6 @@ header .navbar {
 .navbar .nav-item {
   margin-bottom: 10px;
 }
-
 
 .btn-primary {
   display: inline-block;
@@ -143,7 +132,6 @@ header .navbar {
   border: 1px solid #003366;
   outline: none;
   /*  */
-
 }
 
 /* footer */
@@ -157,10 +145,8 @@ footer {
 footer p {
   /* padding: 5px; */
   font-size: 10px;
-  color :white;
+  color: white;
 }
-
-
 
 .footer-contact p,
 .footer-copy p {
@@ -168,15 +154,13 @@ footer p {
 }
 /* --- Footer icon size --- */
 footer .footer-contact i {
-  font-size: 0.7rem;    
-  vertical-align: middle; 
-  margin-right: 1px;     
-  color: white; 
+  font-size: 0.7rem;
+  vertical-align: middle;
+  margin-right: 1px;
+  color: white;
 }
 
-
-
-.footer-contact{
+.footer-contact {
   display: flex;
   gap: 10px;
   justify-content: center;
@@ -190,33 +174,29 @@ footer .footer-contact i {
   text-decoration: underline;
 }
 
-
-
-
 /* ************************ */
 /* ************************ */
 
 .btn-primary {
+  background-color: #003366;
+  color: #fff;
+}
+.btn-primary:hover {
   background-color: white;
   color: #444;
   border: 1px solid #d4af37;
 }
-.btn-primary:hover {
-  background-color: #003366;
-  color: #fff;
-}
 
 footer {
-  background-color: #001f3f; /* darker than #003366 */
+  background-color: #001f3f; 
   color: #fdf6ec;
 }
 
 footer .footer-contact i {
-  color: #d4af37; /* gold icons in footer */
+  color: #d4af37; 
 }
 
 /* ************************ */
-
 
 /* Media Queries */
 @media screen and (min-width: 896px) {
